--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,13 @@ html {
   background-color: #eeeeee;
   color: #222831;
   min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 #root {
   min-height: 100vh;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
