--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,13 @@ code {
     monospace;
 }
 
-* {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+*:not(button):not(input):not(select):not(a) {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 img,
@@ -43,6 +42,4 @@ textarea,
 button,
 select,
 a {
-  -webkit-tap-highlight-color: transparent;
-  outline: none;
 }
