--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html {
 
 #root {
   min-height: 100vh;
-  max-width: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   gap: 1rem;
